fix: se cambia ubicación de directorio scripts

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,6 @@ const {
   </head>
   <body class="min-h-screen flex flex-col">
     <slot />
-    <script type="module" src="../scripts/aos-init.js"></script>
+    <script type="module" src="/scripts/aos-init.js"></script>
   </body>
 </html>
