--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import 'aos/dist/aos.css';
 
 interface Props {
   title: string;
@@ -25,6 +26,13 @@ const {
   </head>
   <body class="min-h-screen flex flex-col">
     <slot />
-    <script type="module" src="/scripts/aos-init.js"></script>
+    <script>
+      import AOS from "aos";
+      AOS.init({
+        duration: 800,
+        once: true,
+        offset: 100,
+      });
+    </script>
   </body>
 </html>
