fix: Corrección info empresa

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -11,9 +11,8 @@ const contact = {
   email: 'emprendcontrol@gmail.com',
   address: 'Salamanca, Chile',
   businessHours: [
-    'Lunes a Viernes: 8:00 AM - 6:00 PM',
-    'Sábado: 9:00 AM - 2:00 PM',
-    'Domingos y festivos: Cerrado'
+    'Lunes a Viernes: 9:00 AM - 5:00 PM',
+    'Sábados, Domingos y festivos: Cerrado'
   ],
   socialMedia: {
     facebook: 'https://www.facebook.com/emprendcontrol',
