fix: se eliminan imports innecesarios y se agrega texto alternativo para imagen de logo

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -15,7 +15,7 @@ const navItems = [
       <!-- Logo -->
       <a href="#inicio" class="flex items-center space-x-2 z-50">
         <div class="h-16 w-16">
-          <img src={imgLogo.src} />
+          <img src={imgLogo.src} alt="Logo Emprend Control" />
         </div>
         <span class="text-xl font-bold text-header-text">Emprend Control</span>
       </a>
