--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,5 +1,5 @@
 ---
-import imgLogo from "@/assets/images/logo_emprend-control.png";
+import imgLogo from "@/assets/images/logo_emprend-control.webp";
 
 const navItems = [
   { name: "Inicio", url: "#inicio" },
@@ -9,7 +9,7 @@ const navItems = [
 ];
 ---
 
-<header id="main-header" class="fixed w-full top-0 left-0 z-50 transition-all duration-300">
+<header aria-label="Navegación Principal" id="main-header" class="fixed w-full top-0 left-0 z-50 transition-all duration-300">
   <div class="container mx-auto px-4">
     <nav class="flex items-center justify-between py-4">
       <!-- Logo -->
