fix: se agrega atributo loading=eager a logo de navbar

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -19,6 +19,7 @@ const navItems = [
           <Image 
             src={imgLogo} 
             alt="Logo Emprend Control"
+            loading="eager"
             width={80}
             sizes="(max-width: 480px) 40vw, (max-width: 768px) 25vw, 15vw"
             format="webp" />
