--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import 'aos/dist/aos.css';
+import Analytics from '@vercel/analytics/astro'
 
 interface Props {
   title: string;
@@ -35,5 +36,6 @@ const {
         offset: 100,
       });
     </script>
+    <Analytics />
   </body>
 </html>
